# ai-video-commentary-slicer

./: .env.example  .gitignore  1.py  DEMO_USAGE.md  MODULAR_IMPLEMENTATION_ROADMAP.md  README.md  VIDEO_RECAP_PIPELINE_PLAN.md  batch.example.json  pyproject.toml  requirements.txt
docs/: README.zh-CN.md  code-map.zh-CN.md  development-rules.zh-CN.md
docs/superpowers/plans/: 2026-07-09-pipeline-project-record-integration.md  2026-07-09-project-version-job-data-model.md  2026-07-10-alignment-module-refactor.md  2026-07-10-local-frontend-mvp.zh-CN.md  2026-07-10-rendering-module-refactor.md  2026-07-10-script-generation-module-refactor.md
scripts/: __init__.py  create_fish_voice.py  preview_tts.py  run_batch.py  run_pipeline.py
src/better_story/: __init__.py  cli.py  config.py  review_gui.py  settings.py  settings_gui.py
src/better_story/modules/: align.py  characters.py  edl.py  media.py  qc.py  render.py  rewrite.py  scenes.py  story.py  task.py  transcribe.py  tts.py
src/better_story/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
src/better_story/utils/: api_key.py  audio.py  ffmpeg.py  json_io.py  timecode.py
tests/: test_api_jobs.py  test_api_projects.py  test_pipeline_records.py  test_project_models.py  test_project_store.py
tts_providers/: fish.py  ocool.py
video_slicer/: __init__.py  pipeline.py  pipeline_records.py  project_models.py  voice_registry.py
video_slicer/api/: app.py  job_runner.py  project_service.py
